# project_crypto

./: .gitignore  Arbitrage_detection_issues.md  README.md  app.py  backtesting.py  ccxt.md  config.py  data_fetching.py  exchange_setup.py  main.py  pyproject.toml  requirements.txt
app/detector/: backtesting.py  core.py
app/ingest_ws/: data_fetching.py  data_processing.py  rate_limit_checker.py
app/ui/: app.py
check_1/: check_run.py  config.py  exchange_setup.py  fetch.py  metadata.md  processing.py  rate_check.py
notebooks/: Instructions.docx  Stage1_extracting.ipynb  test_connection.ipynb  ticker_values.ipynb
